<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Acti_Ug_Paper.Ba_second_18">
    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Subject_Name_Layout">
        <Button
            android:id="@+id/button12"
            style="@style/Course_SubjectName_TextView1"
            android:text="@string/EconomicsI"
            app:layout_constraintEnd_toStartOf="@+id/button13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/button13"
            style="@style/Course_SubjectName_TextView2"
            android:text="@string/EconomicsII"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button12"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/button14"
            style="@style/Course_SubjectName_TextView1"
            android:text="@string/Home_ScienceI"
            app:layout_constraintEnd_toStartOf="@+id/button15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button12" />
        <Button
            android:id="@+id/button15"
            style="@style/Course_SubjectName_TextView2"
            android:text="@string/Home_ScienceII"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button14"
            app:layout_constraintTop_toBottomOf="@+id/button13" />
        <Button
            android:id="@+id/button16"
            style="@style/Course_SubjectName_TextView1"
            android:text="@string/GeographyI"
            app:layout_constraintEnd_toStartOf="@+id/button17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button14" />
        <Button
            android:id="@+id/button17"
            style="@style/Course_SubjectName_TextView2"
            android:text="@string/GeographyII"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button16"
            app:layout_constraintTop_toBottomOf="@+id/button15" />
        <Button
            android:id="@+id/button18"
            style="@style/Course_SubjectName_TextView1"
            android:text="@string/political_scienceI"
            app:layout_constraintEnd_toStartOf="@+id/button19"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button16" />
        <Button
            android:id="@+id/button19"
            style="@style/Course_SubjectName_TextView2"
            android:text="@string/political_scienceII"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button18"
            app:layout_constraintTop_toBottomOf="@+id/button17" />
        <Button
            android:id="@+id/button20"
            style="@style/Course_SubjectName_TextView1"
            android:text="@string/SociologyI"
            app:layout_constraintEnd_toStartOf="@+id/button21"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button18" />
        <Button
            android:id="@+id/button21"
            style="@style/Course_SubjectName_TextView2"
            android:text="@string/SociologyII"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button20"
            app:layout_constraintTop_toBottomOf="@+id/button19" />
        <Button
            android:id="@+id/button22"
            style="@style/Course_SubjectName_TextView1"
            android:text="@string/English_LiteratureI"
            app:layout_constraintEnd_toStartOf="@+id/button23"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button20" />
        <Button
            android:id="@+id/button23"
            style="@style/Course_SubjectName_TextView2"
            android:text="@string/English_LiteratureII"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button22"
            app:layout_constraintTop_toBottomOf="@+id/button21" />
        <Button
            android:id="@+id/button24"
            style="@style/Course_SubjectName_TextView1"
            android:text="@string/Hindi_LiteratureI"
            app:layout_constraintEnd_toStartOf="@+id/button25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button22" />
        <Button
            android:id="@+id/button25"
            style="@style/Course_SubjectName_TextView2"
            android:text="@string/Hindi_LiteratureII"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button24"
            app:layout_constraintTop_toBottomOf="@+id/button23" />
        <Button
            android:id="@+id/button26"
            style="@style/Course_SubjectName_TextView1"
            android:text="@string/DrawingI"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/button27"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button24" />
        <Button
            android:id="@+id/button27"
            style="@style/Course_SubjectName_TextView2"
            android:text="@string/DrawingII"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button26"
            app:layout_constraintTop_toBottomOf="@+id/button25" />
        <Button
            android:id="@+id/button28"
            style="@style/Course_SubjectName_TextView1"
            android:text="@string/SanskritI"
            app:layout_constraintEnd_toStartOf="@+id/button29"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button26" />
        <Button
            android:id="@+id/button29"
            style="@style/Course_SubjectName_TextView2"
            android:text="@string/SanskritII"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button28"
            app:layout_constraintTop_toBottomOf="@+id/button27" />
        <Button
            android:id="@+id/button30"
            style="@style/Course_SubjectName_TextView1"
            android:text="@string/HistoryI"
            app:layout_constraintEnd_toStartOf="@+id/button31"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button28" />
        <Button
            android:id="@+id/button31"
            style="@style/Course_SubjectName_TextView2"
            android:text="@string/HistoryII"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button30"
            app:layout_constraintTop_toBottomOf="@+id/button29" />
        <Button
            android:id="@+id/button32"
            style="@style/Course_SubjectName_TextView1"
            android:text="@string/Public_administrationI"
            app:layout_constraintEnd_toStartOf="@+id/button33"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button30" />
        <Button
            android:id="@+id/button33"
            style="@style/Course_SubjectName_TextView2"
            android:text="@string/Public_administrationII"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button32"
            app:layout_constraintTop_toBottomOf="@+id/button31" />
        <Button
            android:id="@+id/button34"
            style="@style/Course_SubjectName_TextView1"
            android:text="@string/UrduI"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/button35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button32" />
        <Button
            android:id="@+id/button35"
            style="@style/Course_SubjectName_TextView2"
            android:text="@string/UrduII"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button34"
            app:layout_constraintTop_toBottomOf="@+id/button33" />
        <Button
            android:id="@+id/button36"
            style="@style/Course_SubjectName_TextView1"
            android:text="@string/Hindi_Compulsory"
            app:layout_constraintEnd_toStartOf="@+id/button37"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button34" />
        <Button
            android:id="@+id/button37"
            style="@style/Course_SubjectName_TextView2"
            android:text="@string/English_Compulsory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button36"
            app:layout_constraintTop_toBottomOf="@+id/button35" />
        <Button
            android:id="@+id/button38"
            style="@style/Course_SubjectName_TextView1"
            android:text="@string/Environmental_Studies"
            app:layout_constraintEnd_toStartOf="@+id/button39"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button36" />
        <Button
            android:id="@+id/button39"
            style="@style/Course_SubjectName_TextView2"
            android:text="@string/Computer_Compulsory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button38"
            app:layout_constraintTop_toBottomOf="@+id/button37" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>