<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".More.Term_Condition">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp">

        <TextView
            android:id="@+id/textView32"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/final_term0"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center_horizontal" />
        <TextView
            android:id="@+id/textView09"
            style="@style/Term_And_Condition"
            android:text="@string/final_term01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView32" />
        <TextView
            android:id="@+id/textView10"
            style="@style/Term_And_Condition"
            android:text="@string/final_term02"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView09" />
        <TextView
            android:id="@+id/textView11"
            style="@style/Term_And_Condition"
            android:text="@string/final_term1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />
        <TextView
            android:id="@+id/textView12"
            style="@style/Term_And_Condition"
            android:text="@string/final_term2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11"/>
        <TextView
            android:id="@+id/textView13"
            style="@style/Term_And_Condition"
            android:text="@string/final_term3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12"/>
        <TextView
            android:id="@+id/textView14"
            style="@style/Term_And_Condition"
            android:text="@string/final_term4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13"/>
        <TextView
            android:id="@+id/textView15"
            style="@style/Term_And_Condition"
            android:text="@string/final_term5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14"/>
        <TextView
            android:id="@+id/textView16"
            style="@style/Term_And_Condition"
            android:text="@string/final_term6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15"/>
        <TextView
            android:id="@+id/textView17"
            style="@style/Term_And_Condition"
            android:text="@string/final_term7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16"/>
        <TextView
            android:id="@+id/textView18"
            style="@style/Term_And_Condition"
            android:text="@string/final_term8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17"/>
        <TextView
            android:id="@+id/textView19"
            style="@style/Term_And_Condition"
            android:text="@string/final_term9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18"/>
        <TextView
            android:id="@+id/textView20"
            style="@style/Term_And_Condition"
            android:text="@string/final_term10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19"/>
        <TextView
            android:id="@+id/textView21"
            style="@style/Term_And_Condition"
            android:text="@string/final_term11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20"/>
        <TextView
            android:id="@+id/textView22"
            style="@style/Term_And_Condition"
            android:text="@string/final_term12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView21"/>
        <TextView
            android:id="@+id/textView23"
            style="@style/Term_And_Condition"
            android:text="@string/final_term13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView22"/>
        <TextView
            android:id="@+id/textView24"
            style="@style/Term_And_Condition"
            android:text="@string/final_term14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView23"/>
        <TextView
            android:id="@+id/textView25"
            style="@style/Term_And_Condition"
            android:text="@string/final_term15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView24"/>
        <TextView
            android:id="@+id/textView26"
            style="@style/Term_And_Condition"
            android:text="@string/final_term16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView25"/>
        <TextView
            android:id="@+id/textView27"
            style="@style/Term_And_Condition"
            android:text="@string/final_term17"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView26"/>
        <TextView
            android:id="@+id/textView28"
            style="@style/Term_And_Condition"
            android:text="@string/final_term18"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView27"/>
        <TextView
            android:id="@+id/textView29"
            style="@style/Term_And_Condition"
            android:text="@string/final_term19"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView28"/>
        <TextView
            android:id="@+id/textView30"
            style="@style/Term_And_Condition"
            android:text="@string/final_term20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView29"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>